configs/app-nextcloud-apache.template.yaml
##
# Kubernetes deployment configuration for running Nextcloud on Apache with
# `mod_php`.
#
# @author Guy Elsmore-Paddock (guy@inveniem.com)
# @copyright Copyright (c) 2019, Inveniem
# @license GNU AGPL version 3 or any later version
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
spec:
  replicas: ${NEXTCLOUD_REPLICA_COUNT}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: backend-nextcloud
  template:
    metadata:
      labels:
        app: backend-nextcloud
        role: backend
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            # Prevent multiple replicas from being on the same node.
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - backend-nextcloud
              topologyKey: "kubernetes.io/hostname"
      containers:
        # Container: The Apache-based Nextcloud backend
        - name: backend-nextcloud-apache
          image: "${REGISTRY_HOST}/inveniem/nextcloud-apache:${CONTAINER_VERSION}"
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              cpu: 1500m
              memory: 512Mi
          volumeMounts:
            - name: volume-nextcloud-app
              mountPath: /var/www/html
            - name: volume-php-cache
              mountPath: /mnt/php-file-cache
            # HACK: Until AKS supports pod presets, we have to kludge the dynamic
            # mounts in via a variable expansion. Do not modify the last line of
            # this comment; it gets expanded and replaced automatically when this
            # file is pre-processed. Remove this entire comment when switching over
            # to using pod presets.
            #
            # ${FILE_SHARE_VOLUME_MOUNT_LINES}
          readinessProbe:
            httpGet:
              # This path should work both before and after installation.
              # In local testing, Nextcloud serves up the installer regardless
              # of which URL is provided.
              path: "/index.php/login?direct=1"
              port: 80
              httpHeaders:
                - name: "Host"
                  value: "${NEXTCLOUD_PRIMARY_HOSTNAME}"
            # Wait 30 seconds after launch before checking for readiness
            # (to allow for automated updates at launch)
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
            # Ensure stability across two checks before continuing to route
            # traffic, so we don't sawtooth during heavy request load between
            # being available-unavailable-available-unavailable.
            successThreshold: 2
          livenessProbe:
            httpGet:
              path: "/status.php"
              port: 80
              httpHeaders:
                - name: "Host"
                  value: "${NEXTCLOUD_PRIMARY_HOSTNAME}"
            # Wait 5 minutes after launch before checking for liveness
            # (to allow for automated updates at launch)
            initialDelaySeconds: 300
            periodSeconds: 5
            timeoutSeconds: 10
            # Restart container after it is down for 60 seconds
            failureThreshold: 12
            successThreshold: 1
      imagePullSecrets:
        # NOTE: This secret is added by `setup_aks_acr_service_principal.sh`.
        - name: "${ACR_DOCKER_CREDS_SECRET}"
      volumes:
        # Ephemeral volume that contains the loaded Nextcloud software
        - name: volume-nextcloud-app
          emptyDir: {}
        # Ephemeral volume for on-disk PHP opcode cache
        - name: volume-php-cache
          emptyDir: {}
        # HACK: Until AKS supports pod presets, we have to kludge the dynamic
        # mounts in via a variable expansion. Do not modify the last line of
        # this comment; it gets expanded and replaced automatically when this
        # file is pre-processed. Remove this entire comment when switching over
        # to using pod presets.
        #
        # ${FILE_SHARE_VOLUME_LINES}
---
apiVersion: v1
kind: Service
metadata:
  name: internal-nextcloud
  labels:
    role: internal-service
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: backend-nextcloud
