configs/ingress-nextcloud.template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-nextcloud-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-body-size: "10g"
spec:
  tls:
    - hosts:
        - "${NEXTCLOUD_INGRESS_HOSTNAME}"
      secretName: nextcloud-tls-certificate
  rules:
    - host: "${NEXTCLOUD_INGRESS_HOSTNAME}"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: internal-nextcloud
                port:
                  number: 80
